--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
 
 <header>
     <h1>Mi Portafolio</h1>
+    <nav>
+        <ul>
+            <li><a href="index.html">Inicio</a></li>
+            <li><a href="about.html">Sobre Mí</a></li>
+            <li><a href="contact.html">Contacto</a></li>
+        </ul>
+    </nav>
 </header>
 
 <div class="container">
@@ -31,11 +38,6 @@
 
         <!-- Añade más proyectos aquí -->
 
-    </section>
-
-    <section class="contact">
-        <h2>Contacto</h2>
-        <p>Para ponerse en contacto, por favor envíe un correo electrónico a <a href="mailto:tucorreo@ejemplo.com">tucorreo@ejemplo.com</a></p>
     </section>
 
 </div>
