--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <h1>Mi Portafolio</h1>
     <nav>
         <ul>
-            <li><a href="index.html">Inicio</a></li>
-            <li><a href="about.html">Sobre Mí</a></li>
-            <li><a href="contact.html">Contacto</a></li>
+            <li><a href="/">Inicio</a></li>
+            <li><a href="/about/">Sobre Mí</a></li>
+            <li><a href="/contact/">Contacto</a></li>
         </ul>
     </nav>
 </header>
