--- a/ph-formulador.html
+++ b/ph-formulador.html
@@ -132,6 +132,24 @@
     </div>
     <!-- Project Detail End -->
 
+
+
+    <div class="slider">
+        <div class="item" style="background-image: url('img/frm/PH 470 FRM 1.00.png');"></div>
+        <div class="item" style="background-image: url('img/frm/PH 470 FRM 1.00 2.png');"></div>
+        <div class="item" style="background-image: url('img/frm/PH 470 FRM 1.00 3.png');"></div>
+        <div class="item" style="background-image: url('img/frm/PH 470 FRM 1.00 4.png');"> </div>
+        <div class="item" style="background-image: url('img/frm/PH 470 FRM 1.00 5.png');"> </div>
+        <div class="item" style="background-image: url('img/frm/PH 470 FRM 1.00 6.png');"> </div>
+        <div class="item" style="background-image: url('img/frm/PH 470 FRM 1.00 7.png');"> </div>
+        <div class="item" style="background-image: url('img/frm/PH 470 FRM 1.00 8.png');"> </div>
+        <button id="next">></button>
+        <button id="prev"><</button>
+    </div>
+
+
+
+
         <!-- Team Start -->
         <div class="container-xxl py-5">
             <div class="container">
@@ -290,7 +308,7 @@
     <script src="lib/waypoints/waypoints.min.js"></script>
     <script src="lib/owlcarousel/owl.carousel.min.js"></script>
     <script src="lib/lightbox/js/lightbox.min.js"></script>
-
+    <script src="js/app.js"></script>
     <!-- Template Javascript -->
     <script src="js/main.js"></script>
 </body>
