--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@
                     </div>
                 </div>    
 
-                <div class="col-lg-4 col-md-6 portfolio-item wow fadeInUp" data-wow-delay="0.5s">
+                 <!-- <div class="col-lg-4 col-md-6 portfolio-item wow fadeInUp" data-wow-delay="0.5s">
                     <div class="rounded overflow-hidden">
                         <div class="position-relative overflow-hidden">
                             <img class="img-fluid w-100" src="img/python.jpg" alt="">
@@ -420,7 +420,8 @@
                             <a class="fw-medium" href="">Ver Mas<i class="fa fa-arrow-right ms-2"></i></a>
                         </div>
                     </div>
-                </div>
+                </div> -->
+
             </div>
         </div>
     </div>
